<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    tools:context=".AutoInstrumentationFragment">

    <RelativeLayout
        android:id="@+id/scrollViewChild"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <RelativeLayout
            android:id="@+id/relativeLayoutUserActions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?backgroundCard">

            <TextView
                android:id="@+id/textViewUserActionBanner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="?textLarge"
                android:text="@string/user_action_monitoring" />

            <LinearLayout
                android:id="@+id/linerLayoutUserAction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="?layoutRow"
                android:layout_below="@+id/textViewUserActionBanner"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonUserActionHelp"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    style="?buttonTooltip"
                    android:text="@string/question_mark" />

                <Button
                    android:id="@+id/buttonUserAction"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    style="?buttonDefault"
                    android:text="@string/user_action"
                    android:onClick="onFragmentButton" />

                <EditText
                    android:id="@+id/editTextNewButtonText"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    style="?editTextBox"
                    android:hint="@string/change_button_text" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linerLayoutExtendAndModify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="?layoutRow"
                android:layout_below="@+id/linerLayoutUserAction"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonModifyUserActionNameHelp"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    style="?buttonTooltip"
                    android:text="@string/question_mark" />

                <Button
                    android:id="@+id/buttonModifyUserActionName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="?buttonDefault"
                    android:text="@string/modify_user_action"
                    android:onClick="onFragmentButton" />
            </LinearLayout>
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/relativeLayoutWebRequests"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?backgroundCard"
            android:layout_below="@+id/relativeLayoutUserActions" >

            <TextView
                android:id="@+id/textviewWebRequestBanner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="?textLarge"
                android:text="@string/web_request_monitoring" />

            <LinearLayout
                android:id="@+id/linearLayoutRequestUrl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="?layoutRow"
                android:layout_below="@+id/textviewWebRequestBanner"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/url"
                    android:textSize="@dimen/text_size_small"/>

                <EditText
                    android:id="@+id/editTextURL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="?editTextBox"
                    android:text="@string/request_url"
                    android:hint="@string/change_url"
                    android:inputType="textUri" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutWebRequest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="?layoutRow"
                android:layout_below="@+id/linearLayoutRequestUrl"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonWebRequestHelp"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    style="?buttonTooltip"
                    android:text="@string/question_mark"/>

                <Button
                    android:id="@+id/buttonWebRequest"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    style="?buttonDefault"
                    android:text="@string/web_request"
                    android:onClick="onFragmentButton" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutNumberOfRequests"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="?layoutRow"
                android:layout_below="@+id/linearLayoutWebRequest"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewNumberOfRequests"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="right"
                    android:text="@string/requests_to_send" />

                <SeekBar
                    android:id="@+id/seekbarNumberOfRequests"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:indeterminate="false"
                    android:min="1"
                    android:max="20" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="?layoutRow"
                android:layout_below="@+id/linearLayoutNumberOfRequests"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewDelayIndicator"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/delay"
                    android:gravity="right" />

                <SeekBar
                    android:id="@+id/seekbarRequestDelay"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:indeterminate="false"
                    android:min="0"
                    android:max="5000" />
            </LinearLayout>
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/relativeLayoutCrashesAndErrors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relativeLayoutWebRequests"
            style="?backgroundCard" >

            <TextView
                android:id="@+id/textViewCrashReportingBanner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/crash_reporting"
                style="?textLarge" />

            <LinearLayout
                android:id="@+id/linearLayoutExceptions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textViewCrashReportingBanner"
                android:orientation="horizontal"
                style="?layoutRow" >

                <Button
                    android:id="@+id/buttonCaughtExceptionHelp"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    style="?buttonTooltip"
                    android:text="@string/question_mark" />

                <Button
                    android:id="@+id/buttonCaughtException"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="?buttonDefault"
                    android:onClick="onFragmentButton"
                    android:text="@string/caught_error" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutCrashes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearLayoutExceptions"
                android:orientation="horizontal"
                style="?layoutRow" >

                <Button
                    android:id="@+id/buttonCrashHelp"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    style="?buttonTooltip"
                    android:text="@string/question_mark" />

                <Button
                    android:id="@+id/buttonCrash"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="?buttonDefault"
                    android:onClick="onFragmentButton"
                    android:text="@string/crash_app" />
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>
</ScrollView>
